--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap4": "0.0.1-security",
     "express": "^4.17.1",
+    "git": "^0.1.5",
     "hbs": "^4.1.1",
     "mongodb": "^3.6.3",
     "regex": "^0.1.1"
