--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "start": "node app.js",
+   "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
